<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/current_book_tv"
        style="@style/mainBlocksStyle"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="28dp"
        android:background="@color/colorPrimary"
        android:text="@string/current_book"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/past_book_tv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/future_books_tv"
        style="@style/mainBlocksStyle"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="28dp"
        android:background="@color/colorPrimary"
        android:text="@string/future_books"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/recommendations_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/past_book_tv"
        style="@style/mainBlocksStyle"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="132dp"
        android:background="@color/colorPrimary"
        android:text="@string/past_books"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/recommendations_tv"
        style="@style/mainBlocksStyle"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="132dp"
        android:background="@color/colorPrimary"
        android:text="@string/recommendations"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>